added submission link to wipeout

--- a/events/ECML_PKDD_2025_WIPE-OUT_Innovations_Privacy-preservation_Evaluations_Machine_Unlearning_Techniques.html
+++ b/events/ECML_PKDD_2025_WIPE-OUT_Innovations_Privacy-preservation_Evaluations_Machine_Unlearning_Techniques.html
@@ -442,6 +442,11 @@
   <li><a href="#submissions">Submission and Publication</a></li>
 </ul>
 
+<h3 class="pt-3" id="aims_scope">Submission website:</h3>
+<p> <a href="https://cmt3.research.microsoft.com/ECMLPKDDWorkshopTrack2025/Submission/Index">Click here to submit</a> </p>
+
+
+
 <h3 class="pt-3" id="aims_scope">Aims and Scope</h3>
 <p>As AI adoption soars, so do concerns over data privacy, ethics, and regulatory compliance (e.g., GDPR, AI Act, CCPA, Bill C-27). Machine Unlearning (MU) emerges as a game-changer, enabling selective removal of learned information without costly retraining—mitigating biases, protecting sensitive data, and aligning AI with ethical standards.</p>
 
